update gcc and reduce log spam
Signed-off-by: Manish4586 <manish.n.manish45@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 
   - sudo apt-get update -qq
   
-  - git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 ~/aarch64-linux-android-4.9/
+  - git clone https://github.com/Manish4586/aarch64-linux-android-4.9 ~/aarch64-linux-android-4.9/
   
   - sudo chmod -R a+x *
 
